--- a/classwork/Resaurant/Menu.html
+++ b/classwork/Resaurant/Menu.html
@@ -15,35 +15,39 @@
       <title>Menu</title>
       <link rel="icon" href="images/house.png">
 
+      <!--The style sheets-->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
       <link href = "styles\menu.css" rel = "stylesheet" type="text/css">
     </head>
 
     <body>
+      <!--The whole page is in a section for parallax-->
       <div class="wrapper" id="page">
+        <!--This is a message if javascript is disabled-->
         <noscript>
             You have javascript disabled. This will affect your viewing experience.
         </noscript>
 
-
+        <!--The header of the page-->
         <header class="section parallax bg1">
           <div class="darken darken-text fill">
-            <div style="padding-top:300px; padding-left:10%;">
-              <h1>The Restaurant</h1>
-              <h2>Best Korean BBQ</h2>
+            <div id="logo">
+              <a href = "home.html" ><h1>The Restaurant</h1></a>
+              <h2 id = "sub">Best Korean BBQ</h2>
             </div>
           </div>
         </header>
 
-
+        <!--The navigation bar (controlled by javascript)-->
         <nav id="navbar" >
           <a class = "btn fas fa-home" href="Home.html" id = "home" ></a>
           <a class = "btn fas fa-utensils" href="Menu.html" id = "menu"> </a>
           <a class = "btn fas fa-comment-dots" href="Contact Us.html" id = "contact"></a>
         </nav>
 
-
+        <!--This news carousel has new updates of the restaurant-->
+        <!--It doesn't move automatically to allow for accessability-->
         <div id="news-carousel" class="carousel slide" data-ride="carousel" data-interval="false" >
 
           <ul class="carousel-indicators">
@@ -66,43 +70,54 @@
             </div>
           </div>
 
-          <a class="carousel-control-prev" href="#news-carousel" data-slide="prev" style="z-index:3; color:black; font-size:30px;">
+          <a class="carousel-control carousel-control-prev" href="#news-carousel" data-slide="prev">
             <i class="fas fa-chevron-left"></i>
           </a>
-          <a class="carousel-control-next" href="#news-carousel" data-slide="next"style="z-index:3; color:black; font-size:30px;">
+          <a class="carousel-control carousel-control-next" href="#news-carousel" data-slide="next">
             <i class="fas fa-chevron-right"></i>
           </a>
 
         </div>
 
+        <!--The main title for the page-->
         <div class="page-title">
           <h4> Menu </h4>
         </div>
 
+        <!--This holds all the food menu-->
         <div class = "menu">
+          <!--The menu is split into three sections which can be opened-->
           <div class="menu-section" id = "menu-section1">
             <div class="menu-heading" id="Accordion1">
               <h4>Meat</h4>
             </div>
 
+            <!--This is where the food goes and uses bootstrap to adjust its display-->
             <div class="row" id="Content1">
               <div class="col-lg-3 col-md-3 col-sm-12">
-                <p><strong>BBQ Pork Belly</strong> <br>£8.20</p>
+                <p class="food menu-row">BBQ Pork Belly</p>
+                <p class="desc menu-row">Pork Belly in a sticky BBQ sauce</p>
+                <p class="price menu-row">£8.20</p>
               </div>
               <div class="col-lg-1 col-md-1 col-sm-12">
                 <hr/>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12">
-                <p><strong>New York Style Chicken</strong> <br>£7.80</p>
+                <p class="food menu-row">New York Style Chicken</p>
+                <p class="desc menu-row">Chicken breast in a smokey BBQ sauce</p>
+                <p class="price menu-row">£7.80</p>
               </div>
               <div class="col-lg-1 col-md-1 col-sm-12">
-                <hr/>
+                  <hr/>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-12">
-                <p><strong>Beef Strips</strong> <br>£8.50</p>
+                <p class="food menu-row">Beef Strips</p>
+                <p class="desc menu-row">Thick juicy strips of beef.</p>
+                <p class="price menu-row">£8.50</p>
               </div>
             </div>
 
+            <!--This bar indicates that it should be clicked on-->
             <div class="pullbar" id="pull1">
               <i class="fas fa-chevron-down" id="chev1"></i>
             </div>
@@ -116,19 +131,25 @@
 
             <div class="row" id="Content2">
               <div class="col-lg-3 col-md-3 col-sm-12">
-                <p><strong>Bap</strong> <br>£2.00</p>
+                <p class="food menu-row">Bap</p>
+                <p class="desc menu-row">A bowl of sticky rice</p>
+                <p class="price menu-row">£2.00</p>
               </div>
               <div class="col-lg-1 col-md-1 col-sm-12">
                 <hr/>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12">
-                <p><strong>Noodles</strong> <br>£3.20</p>
+                <p class="food menu-row">Noodles</p>
+                <p class="desc menu-row">A bowl of mixed noodles</p>
+                <p class="price menu-row">£3.20</p>
               </div>
               <div class="col-lg-1 col-md-1 col-sm-12">
                 <hr/>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-12">
-                <p><strong>KFC</strong> <br>£5.20</p>
+                <p class="food menu-row">KFC</p>
+                <p class="desc menu-row">Korean style Fried Chicken</p>
+                <p class="price menu-row">£5.20</p>
               </div>
             </div>
 
@@ -144,20 +165,26 @@
             </div>
 
             <div class="row" id="Content3">
-              <div class="col-lg-3 col-md-3 col-sm-12">
-                <p><strong>Bottled Water</strong> <br> Pure spring water. <br>£2.00</p>
+              <div class="col-lg-3 col-md-3 col-sm,-12">
+                <p class="food menu-row">Bottled Water</p>
+                <p class="desc menu-row">Pure spring water.</p>
+                <p class="price menu-row">£2.00</p>
               </div>
               <div class="col-lg-1 col-md-1 col-sm-12">
                 <hr/>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12">
-                <p><strong>Soft Drink</strong> <br> A full range of soft drinks. <br>£2.80</p>
+                <p class="food menu-row">Soft Drink</p>
+                <p class="desc menu-row">A full range of soft drinks.</p>
+                <p class="price menu-row">£2.80</p>
               </div>
               <div class="col-lg-1 col-md-1 col-sm-12">
                 <hr/>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-12">
-                <p><strong>Milk Drink</strong> <br>£2.50</p>
+                <p class="food menu-row">Soju</p>
+                <p class="desc menu-row">A clear, slightly-sweet distilled spirit</p>
+                <p class="price menu-row">£4.00</p>
               </div>
             </div>
 
@@ -168,7 +195,8 @@
         </div>
 
 
-        <div class="section parallax bg3">
+        <!--The footer contains some key information-->
+        <footer class="section parallax bg3">
             <div class="darken darken-text fill" class="relative">
               <div class="fix-bottom left">
                 <p> The street, <br> Coventry, <br>UK <br>CV1 00A </p>
@@ -183,19 +211,21 @@
                 <p> <i class="fab fa-instagram"></i> /TheRestaurant</p>
               </div>
             </div>
+        </footer>
+    </div>
 
-        </div>
+        <!--These scripts are general codes to allow all the pages to work-->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/7ca58b5fbf.js" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-      </div>
-
-          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-          <script src="https://kit.fontawesome.com/7ca58b5fbf.js" crossorigin="anonymous"></script>
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-          <script src="scripts/menu.js"></script>
-          <script src="scripts/nav_stick.js"></script>
+        <!--This controls features specific to the menu page-->
+        <script src="scripts/menu.js"></script>
+        <!--This controls the navigation bar-->
+        <script src="scripts/nav_stick.js"></script>
 
     </body>
 </html>
